[package]
name = "nbody"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
#strip = true
panic = "abort"
codegen-units = 1
opt-level = 3

[dependencies]
env_logger = "0.10.0"
error-iter = "0.4.1"
flume = "0.11.0"
log = "0.4.20"
once_cell = "1.18.0"
pixels = "0.13.0"
rand = "0.8.5"
rayon = "1.7.0"
winit = "0.28.6"
winit_input_helper = "0.14.1"
