[package]
name = "nbody"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
#strip = true
debug = true
panic = "abort"
codegen-units = 1
opt-level = 3

[dependencies]
env_logger = "0.10.0"
error-iter = "0.4.1"
flume = "0.11.0"
log = "0.4.20"
numquant = "0.2.0"
pathfinder_geometry = "0.5.1"
pixels = "0.13.0"
rand = "0.8.5"
rayon = "1.7.0"
winit = "0.28.6"
winit_input_helper = "0.14.1"
zstd = "0.13.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"
